--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
+      CODECOV_TOKEN: "6fbb372d-1d72-4fdc-9824-f667e82d9aad"
 
     steps:
       - checkout
