--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@
 version: 2
 jobs:
   build:
+
+    working_directory: ~/circleci-demo-java-spring
+
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
@@ -14,8 +17,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
-
+    #    working_directory: ~/repo
     # environment:
     #   # Customize the JVM maximum heap limit
     #   JVM_OPTS: -Xmx3200m
