--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+            - circleci-demo-java-spring-{{ checksum "pom.xml" }}
 
       - run: mvn dependency:go-offline
 
