--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,29 +31,23 @@ jobs:
           keys:
             - circleci-demo-java-spring-{{ checksum "pom.xml" }}
 
-      - run: mvn dependency:go-offline
+      - run: mvn dependency:go-offline # gets the project dependencies
 
-      - save_cache:
+      - save_cache: # saves the project dependencies
           paths:
             - ~/.m2
           key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
 
-      # run tests! and gen code coverage
-      # - run: ./gradlew clean test jacocoTestReport
       - run: mvn package # run the actual tests
 
-      - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/junit/
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
-          when: always
+      - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard.
+          # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: target/surefire-reports
 
-      - store_test_results:
-          path: ~/junit
-
-      - store_artifacts:
-          path: ~/junit
+      - store_artifacts: # store the uberjar as an artifact
+          # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+          path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 
       - run:
           name: Send to CodeCov
