--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,9 @@ jobs:
           path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 
+      - codecov/upload:
+          file: {{ target/my-reports }}
+
       - run:
           name: Send to CodeCov
           command: bash <(curl -s https://codecov.io/bash)
