--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 
       - codecov/upload:
-          file: {{ target/my-reports }}
+          file: target/my-reports
 
       - run:
           name: Send to CodeCov
