--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,4 +41,4 @@ jobs:
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 
       - codecov/upload:
-          file: target/my-reports
+          file: target/jacoco.exec
