--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
 
       - run: mvn package # run the actual tests
 
+      - run: jacoco:report
+
       - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard.
           # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: target/surefire-reports
@@ -41,4 +43,4 @@ jobs:
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 
       - codecov/upload:
-          file: target/jacoco.exec
+          file: target/my-reports/jacoco.xml
